Issue-91: Adjust alignment of nav items

--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -146,7 +146,6 @@
 
 @media screen and (min-width: 768px) {
   .navBar {
-    display: flex;
     gap: var(--size-3);
   }
 
